added last function, and finish practice